--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="unit_1/css/style.css">
 <html>
   <head>
 Faux Latin Corp
