--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<link rel="stylesheet" type="text/css" href="unit_1/css/style.css">
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 Faux Latin Corp
   </head>
 
