--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -10,6 +10,7 @@
 Faux Latin Corp.</h1>
 <h4>Quod Erat Demonstratum</h4>
 <p>We are the world's leading providers of almost-real latin.</p>
+<a href="mailto:wcedmonds@gmail.com"><button>Email Us</button></a>
   </body>
 
 </html>
