--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -8,7 +8,7 @@
   <body>
 <h1>
 Faux Latin Corp.</h1>
-<h4>Quod Erat Demonstratum</h4>
+<h4>Lorem Ipsum Dolor</h4>
 <p>We are the world's leading providers of almost-real latin.</p>
 <a href="mailto:wcedmonds@gmail.com"><button>Email Us</button></a>
   </body>
