--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-<title>Faux Latin Corp</title>
+<title>Hello World!</title>
   </head>
 
   <body>
-<h1>
-Faux Latin Corp.</h1>
-<h4>Lorem Ipsum Dolor</h4>
-<p>We are the world's leading providers of almost-real latin.</p>
-<a href="mailto:wcedmonds@gmail.com"><button>Email Us</button></a>
+    <h1>Greeting the world since 1972</h1>
+    <h4>Lorem Ipsum Dolor</h4>
+    <p>How are you, world?</p>
+    <a href="mailto:wcedmonds@gmail.com"><button>Hello, William</button></a>
   </body>
 
 </html>
