--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -7,9 +7,9 @@
 
   <body>
     <h1>Greeting the world since 1972</h1>
-    <h4>Lorem Ipsum Dolor</h4>
+    <h4>Hello, world!</h4>
     <p>How are you, world?</p>
-    <a href="mailto:wcedmonds@gmail.com"><button>Hello, William</button></a>
+    <a href="mailto:wcedmonds@gmail.com"><button>Good, thanks.</button></a>
   </body>
 
 </html>
