--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,9 +6,10 @@
   </head>
 
   <body>
-    
-  <h1>Bettina Baruch Foundation</h1>
-  <h4>We provide funding to charities supporting musical education and animal welfare.</h4>
+
+<h1>Bettina<br>Baruch<br>Foundation</h1>
+
+  
   <img src="images/Jane-Bernard-85.jpg" width="290" height="210" alt=""/><img src="images/PS68CelloViolinGirls-300x199.jpg" width="300" height="210" alt=""/>
 <p>Contact us for more information:</p>
     <a href="mailto:wcedmonds@gmail.com"><button>Email!</button></a>
