--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -9,9 +9,8 @@
   </head>
 
   <body>
-
-      <h1 >Bettina Baruch Foundation</h1>
-  <h4 >We provide funding to charities supporting musical education and animal welfare.</h4>
+<img align="middle" src="../../../Desktop/Screen Shot 2016-01-31 at 8.40.43 PM.png" alt="" width="800" height="66"/>
+<h4 >We provide funding to charities supporting musical education and animal welfare.</h4>
 
 <div id="images">
   <div style="clear: both;"></div>
