width and 2col layout

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-<img align="middle" src="../../../Desktop/Screen Shot 2016-01-31 at 8.40.43 PM.png" alt="" width="800" height="66"/>
+<img src="images/Screen Shot 2016-01-31 at 8.40.43 PM.png" width="800" height="66" alt="" class="acenter"/>
 <h4 >We provide funding to charities supporting musical education and animal welfare.</h4>
 
 <div id="images">
