--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -26,7 +26,7 @@
       <aside id="left">
         <img class="displayed" src="images/PS68CelloViolinGirls-300x199.jpg" height="300" width="290"/>
       </aside>
-      <article id="right">
+      <aside id="right">
         <img class="displayed1" src="images/Jane-Bernard-85.jpg" height="300" width="400"/>
     </section>
 </div>
