--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 <title>Bettina Baruch Foundation</title>
   </head>
@@ -26,16 +26,14 @@
       <aside id="left">
         <img class="displayed" src="images/PS68CelloViolinGirls-300x199.jpg" height="300" width="290"/>
       </aside>
+<br class="rwd-break">
       <aside id="right">
         <img class="displayed1" src="images/Jane-Bernard-85.jpg" height="300" width="400"/>
     </section>
 </div>
-
-<br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <footer>
-<p>Contact us for more information:</p>
-    <a href="mailto:wcedmonds@gmail.com"><button>Email!</button></a>
+<p class="md">Contact us for more information:</p>
+    <a href="mailto:wcedmonds@gmail.com"><button>Email</button></a>
   </footer>
   </body>
 
