--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <title>Bettina Baruch Foundation</title>
   </head>
 
@@ -20,20 +21,18 @@
 
   <body>
 
-
+  <div class="row">
     <div class="images">
-    <section id=“two_column” class=“clearfix”>
-      <aside id="left">
+      <div class="col-sm-6">
         <img class="displayed" src="images/PS68CelloViolinGirls-300x199.jpg" height="300" width="290"/>
-      </aside>
-<br class="rwd-break">
-      <aside id="right">
+      </div>
+      <div class="col-sm-6">
         <img class="displayed1" src="images/Jane-Bernard-85.jpg" height="300" width="400"/>
-    </section>
+</div>
 </div>
 <footer>
-<p class="md">Contact us for more information:</p>
-    <a href="mailto:wcedmonds@gmail.com"><button>Email</button></a>
+<p class="special">Contact us for more information:<br>917.882.8900<br>rcedmonds@edmonds-law.com</p>
+
   </footer>
   </body>
 
