--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -15,8 +15,13 @@
     <h4>We provide funding to charities supporting musical education and animal welfare.</h4>
 </header>
   <nav>
-<p class="special" style="font-family: Alegreya SC">Home<br>Trustees<br>Charities </strong>
-</p>
+    <div class="container-fluid">
+    <div class="row">
+<h3 class="col-md-4" style="text-align: center">Home</h3>
+<h3 class="col-md-4" style="text-align: center">Trustees</h3>
+<h3 class="col-md-4" style="text-align: center">About</h3>
+</div>
+</div>
   </nav>
 
   <body>
@@ -24,10 +29,13 @@
   <div class="row">
     <div class="images">
       <div class="col-sm-6">
-        <img class="displayed" src="images/PS68CelloViolinGirls-300x199.jpg" height="350" width="350"/>
+        <img class="displayed" src="images/PS68CelloViolinGirls-300x199.jpg" height="300" width="300"/>
+        <h3 style="margin-left: 14%">Education Through Music</h3>
       </div>
+    </br>
       <div class="col-sm-6">
         <img class="displayed1" src="images/Jane-Bernard-85.jpg" height="300" width="400"/>
+        <h3 style="margin-left: 40%">Dog Charity</h3>
 </div>
 </div>
 <footer>
