--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -17,25 +17,26 @@
   <nav>
     <div class="container-fluid">
     <div class="row">
-<h3 class="col-md-4" style="text-align: center">Home</h3>
-<h3 class="col-md-4" style="text-align: center">Trustees</h3>
-<h3 class="col-md-4" style="text-align: center">About</h3>
+<a href="index.html" class="col-md-4" style="text-align: center">Home</a>
+<a href="trustees.html" class="col-md-4" style="text-align: center">Trustees</a>
+<a href="unit_8/about.html" class="col-md-4" style="text-align: center">About</a>
 </div>
 </div>
   </nav>
-
+<br>
   <body>
-
+    <h2 style="font-family: Georgia" class="text-center">Featured Charities</h2>
+<br>
   <div class="row">
     <div class="images">
       <div class="col-sm-6">
+        <h3 style="font-family: Georgia" style="margin-left: 14%">Education Through Music</h3>
         <img class="displayed" src="images/PS68CelloViolinGirls-300x199.jpg" height="300" width="300"/>
-        <h3 style="margin-left: 14%">Education Through Music</h3>
       </div>
     </br>
       <div class="col-sm-6">
+        <h3 style="font-family: Georgia" style="margin-left: 40%">Dog Charity</h3>
         <img class="displayed1" src="images/Jane-Bernard-85.jpg" height="300" width="400"/>
-        <h3 style="margin-left: 40%">Dog Charity</h3>
 </div>
 </div>
 <footer>
