--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -1,48 +1,36 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<title>Bettina Baruch Foundation</title>
-  </head>
-
-<header>
-
-<h1 style="font-family: Georgia"> Bettina Baruch Foundation</h1>
-    <h4>We provide funding to charities supporting musical education and animal welfare.</h4>
-</header>
-  <nav>
-    <div class="container-fluid">
+    <title>Bettina Baruch Foundation</title>
+</head>
+<body>
+    <header>
+        <h1> Bettina Baruch Foundation</h1>
+        <h4>We provide funding to charities supporting musical education and animal welfare.</h4>
+    </header>
+    <nav>
+        <a href="index.html" class="col-md-4" style="text-align: center">Home</a>
+        <a href="trustees.html" class="col-md-4" style="text-align: center">Trustees</a>
+        <a href="unit_8/about.html" class="col-md-4" style="text-align: center">About</a>
+    </nav>
+    <h2 class="text-center">Featured Charities</h2>
     <div class="row">
-<a href="index.html" class="col-md-4" style="text-align: center">Home</a>
-<a href="trustees.html" class="col-md-4" style="text-align: center">Trustees</a>
-<a href="unit_8/about.html" class="col-md-4" style="text-align: center">About</a>
-</div>
-</div>
-  </nav>
-<br>
-  <body>
-    <h2 style="font-family: Georgia" class="text-center">Featured Charities</h2>
-<br>
-  <div class="row">
-    <div class="images">
-      <div class="col-sm-6">
-        <h3 style="font-family: Georgia" style="margin-left: 14%">Education Through Music</h3>
-        <img class="displayed" src="images/PS68CelloViolinGirls-300x199.jpg" height="300" width="300"/>
-      </div>
-    </br>
-      <div class="col-sm-6">
-        <h3 style="font-family: Georgia" style="margin-left: 40%">Dog Charity</h3>
-        <img class="displayed1" src="images/Jane-Bernard-85.jpg" height="300" width="400"/>
-</div>
-</div>
-<footer>
-<p class="special">Contact us for more information:<br>917.882.8900<br>rcedmonds@edmonds-law.com</p>
-
-  </footer>
-  </body>
-
+        <div class="images">
+            <div class="col-sm-6">
+                <h3>Education Through Music</h3>
+                <img class="displayed" src="images/PS68CelloViolinGirls-300x199.jpg" height="300" width="300">
+            </div>
+            <div class="col-sm-6">
+                <h3>Dog Charity</h3>
+                <img class="displayed1" src="images/Jane-Bernard-85.jpg" height="300" width="400">
+            </div>
+        </div>
+    </div>
+    <footer>
+        <p class="special">Contact us for more information:<br>917.882.8900<br>rcedmonds@edmonds-law.com</p>
+    </footer>
+</body>
 </html>
